# textbox

./: .gitignore  CMakeLists.txt  dependencies.sh  fromBottom.py  fromEnd.py  install.sh  intructions for end.txt  readme.md  softmax.jl  textbox.cpp
fromBottom.app/Contents/: Info.plist  document.wflow
fromEnd.app/Contents/: Info.plist  document.wflow
src/boxslice/: CMakeLists.txt  boxslice.cpp
src/layoutcrop/: CMakeLists.txt  layoutcrop.cpp
src/layoutfit/: CMakeLists.txt  layoutfit.cpp
src/selectText/: CMakeLists.txt  selecttext.cpp
src/textbox/: CMakeLists.txt  textbox.cpp
src/textbox2/: CMakeLists.txt  textbox2.cpp
tools/: fromBottom.py  fromEnd.py  intructions for end.txt  layoutTool.py  pickSelection.py  revBottom.py  slice.py  verify.py
tst/: tst.freq-dawg  tst.inttemp  tst.normproto  tst.number-dawg  tst.pffmtable  tst.punc-dawg  tst.shapetable  tst.user-words  tst.word-dawg  tst.word-list
