cmake_minimum_required(VERSION 2.8)
project( layoutfit )
find_package( OpenCV REQUIRED )
include_directories (/usr/local/Cellar/tesseract/3.04.01_1/include)
link_directories (/usr/local/Cellar/tesseract/3.04.01_1/lib)
include_directories (/usr/local/Cellar/leptonica/1.72/include)
link_directories (/usr/local/Cellar/leptonica/1.72/lib)
add_executable( layoutfit layoutfit.cpp )
target_link_libraries( layoutfit ${OpenCV_LIBS} )
target_link_libraries( layoutfit tesseract )