cmake_minimum_required(VERSION 2.8)
project( TextBox )
find_package( OpenCV REQUIRED )
include_directories (/usr/local/Cellar/tesseract/3.04.00/include)
link_directories (/usr/local/Cellar/tesseract/3.04.00/lib)
include_directories (/usr/local/Cellar/leptonica/1.72/include)
link_directories (/usr/local/Cellar/leptonica/1.72/lib)
add_executable( TextBox textbox.cpp )
target_link_libraries( TextBox ${OpenCV_LIBS} )
target_link_libraries( TextBox tesseract )
