cmake_minimum_required(VERSION 2.8)
project( textbox2 )
find_package( OpenCV REQUIRED )
include_directories (/usr/local/Cellar/tesseract/3.04.01_1/include)
link_directories (/usr/local/Cellar/tesseract/3.04.01_1/lib)
include_directories (/usr/local/Cellar/leptonica/1.72/include)
link_directories (/usr/local/Cellar/leptonica/1.72/lib)
add_executable( textbox2 textbox2.cpp )
target_link_libraries( textbox2 ${OpenCV_LIBS} )
target_link_libraries( textbox2 tesseract )
